fix: Fix copy to clipboard spacing in RTL

--- a/src/copy-to-clipboard/styles.scss
+++ b/src/copy-to-clipboard/styles.scss
@@ -14,6 +14,9 @@
 
   &-trigger {
     white-space: nowrap;
-    margin-inline-end: awsui.$space-scaled-xxs;
   }
+}
+
+.inline-container-text {
+  margin-inline-start: awsui.$space-scaled-xxs;
 }
